--- a/style.css
+++ b/style.css
@@ -62,8 +62,15 @@ h2{
 	padding: 40px;
 	clear: left, right;
 }
+h3{
+	text-align: center;
+	font-size: 22px;
+	padding: 20px;
+	clear: left, right;
+}
+
 .receita{
-	width: 100%;
+	min-width: 980px;
 	margin: 0 auto;
 	padding: 10px 0;
 	display: flex;
@@ -92,6 +99,7 @@ h2{
 	background: rgba(128, 128, 128, 0.158);
 	transition: 1s background;
 }
+.receita
 .receita .titulo{
 	font-weight: bold;
 	padding: 15px;
