--- a/style.css
+++ b/style.css
@@ -55,6 +55,16 @@ nav a{
 	
 }
 
+.passoapasso{
+	border: 3px solid pink;
+	border-radius: 10px;
+	max-width: 980px;
+	margin: 30px auto;
+	padding: 10px 10px;
+    justify-content: center;
+    align-items: center;
+}
+
 h2{
 	text-align: center;
 	font-weight: bold;
