--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ nav a{
 	font-weight: bold;
 	font-size: 22px;
 }
+.receita-item{
+	text-decoration: none;
+	color: black;
+}
 
 /*main*/
 
@@ -109,8 +113,7 @@ h3{
 	background: rgba(128, 128, 128, 0.158);
 	transition: 1s background;
 }
-.receita
-.receita .titulo{
+.titulo{
 	font-weight: bold;
 	padding: 15px;
 	font-size: 20px;
@@ -170,6 +173,18 @@ textarea{
 form p{
 	font-size: 12px;
 	padding: 5px;
+}
+.anuncio{
+	display: inline-block;
+	vertical-align: top;
+	text-align: center;
+	width: 60%;
+	padding: 10px;
+	margin: 30px;
+	border: 3px solid pink;
+	border-radius: 20px;
+    justify-content: center;
+    align-items: center;
 }
 @media screen and (max-width:480px){
 	.cabecario {
